--- a/templates/robot/remote_lab.html
+++ b/templates/robot/remote_lab.html
@@ -13,21 +13,83 @@
         <div class="grid grid-cols-2 h-full gap-10">
             <div class="h-full my-10">
                 <form action="" id="select-form">
-                    <label for="sketch-binary" class="text-lg block mb-2 font-medium text-gray-900">Select a Sketch binary</label>
-                    <div class="border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 border-r-4 border-r-transparent">
+                    <label for="sketch-binary" class="text-lg block mb-2 font-medium text-gray-900">Select a Sketch
+                        binary</label>
+                    <div
+                        class="border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 border-r-4 border-r-transparent">
                         <select id="selectSketch" class="bg-white border block w-full p-2.5">
                             {% for sketch in sketches %}
                             <option value="{{ sketch.binary_file.url }}">{{ sketch.title }}</option>
                             {% endfor %}
                         </select>
                     </div>
-                    <button class="my-10 px-4 py-2 font-semibold text-white rounded shadow-md text-lg bg-secondary" type="submit">Run Sketch</button>
+                    <button
+                        class="my-10 px-4 py-2 font-semibold text-white rounded shadow-md text-lg bg-secondary border-2 border-secondary hover:bg-white hover:text-secondary duration-200"
+                        type="submit">Run Sketch</button>
+                </form>
+                <div class="flex justify-start gap-10">
+                    <label class="inline-block pl-[0.15rem] hover:cursor-pointer text-xl"
+                        for="flexSwitchCheckDefault">Activate
+                        robot manual movement control</label>
+                    <input
+                        class="mt-[0.3rem] mr-2 h-3.5 w-8 appearance-none rounded-[0.4375rem] bg-neutral-300 before:pointer-events-none before:absolute before:h-3.5 before:w-3.5 before:rounded-full before:bg-transparent before:content-[''] after:absolute after:z-[2] after:-mt-[0.1875rem] after:h-5 after:w-5 after:rounded-full after:border-none after:bg-neutral-100 after:shadow-[0_0px_3px_0_rgb(0_0_0_/_7%),_0_2px_2px_0_rgb(0_0_0_/_4%)] after:transition-[background-color_0.2s,transform_0.2s] after:content-[''] checked:bg-primary checked:after:absolute checked:after:z-[2] checked:after:-mt-[3px] checked:after:ml-[1.0625rem] checked:after:h-5 checked:after:w-5 checked:after:rounded-full checked:after:border-none checked:after:bg-primary checked:after:shadow-[0_3px_1px_-2px_rgba(0,0,0,0.2),_0_2px_2px_0_rgba(0,0,0,0.14),_0_1px_5px_0_rgba(0,0,0,0.12)] checked:after:transition-[background-color_0.2s,transform_0.2s] checked:after:content-[''] hover:cursor-pointer focus:before:scale-100 focus:before:opacity-[0.12] focus:before:shadow-[3px_-1px_0px_13px_rgba(0,0,0,0.6)] focus:before:transition-[box-shadow_0.2s,transform_0.2s] focus:after:absolute focus:after:z-[1] focus:after:block focus:after:h-5 focus:after:w-5 focus:after:rounded-full focus:after:content-[''] checked:focus:border-primary checked:focus:bg-primary checked:focus:before:ml-[1.0625rem] checked:focus:before:scale-100 checked:focus:before:shadow-[3px_-1px_0px_13px_#3b71ca] checked:focus:before:transition-[box-shadow_0.2s,transform_0.2s] dark:bg-neutral-600 dark:after:bg-neutral-400 dark:checked:bg-primary dark:checked:after:bg-primary"
+                        type="checkbox" role="switch" id="flexSwitchCheckDefault" checked="false" />
+                </div>
+                <div class="shadow-md bg-gray-100 text-gray-100 w-full h-[400px] p-5 overflow-y-auto rounded"
+                    id="output">
+                    <p class="text-gray-600 m-0 p-0">Output ...</p>
+                </div>
+                <form action="" class="flex justify-between items-center" id="serial-input-form">
+                    <input name="serial-input" type="text" autocomplete="off" placeholder="Serial Input"
+                        class="w-full border-[1px] p-2">
+                    <button type="submit"
+                        class="px-4 py-2 bg-primary text-white shadow-sm duration-200 border-2 border-primary hover:bg-white hover:text-primary rounded">Send</button>
                 </form>
             </div>
-            <div class="w-full">
-                <video id='hls-example' class="video-js vjs-default-skin w-full h-full aspect-video" autoplay controls>
+            <!-- <div class="w-full">
+                <video id='hls-example' class="video-js vjs-default-skin w-full h-auto aspect-video" autoplay controls>
                     <source type="application/x-mpegURL" src="http://52.66.197.49:8088/hls/obs.m3u8">
                 </video>
+            </div> -->
+            <div class="w-full tab-wrapper" x-data="{ activeTab:  0 }">
+                <h3>Video Feed</h3>
+                <div class="grid grid-cols-3">
+                    <label @click="activeTab = 0"
+                        class="text-center w-full px-4 py-2 border-[1px] rounded cursor-pointer"
+                        :class="{ 'shadow-lg bg-secondary text-white': activeTab === 0, 'hover:border-secondary hover:scale-[1.2] duration-300 bg-white': activeTab !== 0}">Camera
+                        1</label>
+                    <label @click="activeTab = 1"
+                        class="text-center w-full px-4 py-2 border-[1px] rounded cursor-pointer"
+                        :class="{ 'shadow-lg bg-secondary text-white': activeTab === 1, 'hover:border-secondary hover:scale-[1.2] duration-300 bg-white': activeTab !== 1}">Camera
+                        2</label>
+                    <label @click="activeTab = 2"
+                        class="text-center w-full px-4 py-2 border-[1px] rounded cursor-pointer"
+                        :class="{ 'shadow-lg bg-secondary text-white': activeTab === 2, 'hover:border-secondary hover:scale-[1.2] duration-300 bg-white': activeTab !== 2}">ESP32
+                        CAM</label>
+                </div>
+
+                <div class="tab-panel" :class="{ 'active': activeTab === 0 }"
+                    x-show.transition.in.opacity.duration.600="activeTab === 0">
+                    <video id='hls-example' class="video-js vjs-default-skin w-full h-auto aspect-video rounded"
+                        autoplay controls>
+                        <source type="application/x-mpegURL" src="http://52.66.197.49:8088/hls/obs1.m3u8">
+                    </video>
+                </div>
+                <div class="tab-panel" :class="{ 'active': activeTab === 1 }"
+                    x-show.transition.in.opacity.duration.600="activeTab === 1">
+                    <video id='hls-example' class="video-js vjs-default-skin w-full h-auto aspect-video rounded"
+                        autoplay controls>
+                        <source type="application/x-mpegURL" src="http://52.66.197.49:8088/hls/obs2.m3u8">
+                    </video>
+                </div>
+                <div class="tab-panel" :class="{ 'active': activeTab === 2 }"
+                    x-show.transition.in.opacity.duration.600="activeTab === 2">
+                    <video id='hls-example' class="video-js vjs-default-skin w-full h-auto aspect-video rounded"
+                        autoplay controls>
+                        <source type="application/x-mpegURL" src="http://52.66.197.49:8088/hls/obs3.m3u8">
+                    </video>
+                </div>
+
             </div>
         </div>
     </div>
@@ -39,22 +101,46 @@
     let player = videojs('hls-example');
     player.play();
 
+    const output = document.getElementById("output")
     const selectForm = document.getElementById("select-form")
     const select = document.getElementById("selectSketch")
+    const formSerialInput = document.getElementById("serial-input-form")
+    const checkManual = document.getElementById("flexSwitchCheckDefault")
+
+    let manualControls = false
+
+    formSerialInput.addEventListener("submit", e => {
+        e.preventDefault()
+
+        const serialInput = formSerialInput['serial-input']
+        const val = serialInput.value
+        serialSocket.send(JSON.stringify({
+            "type": "input",
+            'message': val
+        }));
+
+        output.insertAdjacentHTML(
+            "afterbegin",
+            `<p class="m-0 p-0 text-gray-600"><span class="text-gray-400">Input:</span> ${val}</p>`
+        )
+
+        formSerialInput.reset()
+
+    })
 
     const chatSocket = new WebSocket(
-            'ws://'
-            + window.location.host
-            + '/ws/exec'
-        );
+        'ws://'
+        + window.location.host
+        + '/ws/exec'
+    );
 
-    
-    chatSocket.onmessage = function(e) {
+
+    chatSocket.onmessage = function (e) {
         const data = JSON.parse(e.data);
         console.log(data)
     };
 
-    chatSocket.onclose = function(e) {
+    chatSocket.onclose = function (e) {
         console.error('Chat socket closed unexpectedly');
     };
 
@@ -62,8 +148,103 @@
         e.preventDefault()
 
         chatSocket.send(JSON.stringify({
-                'message': select.value
+            'message': select.value
+        }));
+    })
+
+
+    const serialSocket = new WebSocket(
+        'ws://'
+        + window.location.host
+        + '/ws/serial'
+    );
+
+    let pass = false
+
+    document.addEventListener('keydown', (event) => {
+        if (!manualControls) return
+        if (event.repeat) return
+
+        const name = event.key;
+        const code = event.code;
+        // Alert the key name and key code on keydown
+
+        if (name === 'm') {
+
+            serialSocket.send(JSON.stringify({
+                "type": "input",
+                'message': 'w'
             }));
+
+            pass = true
+
+            setTimeout(() => {
+                serialSocket.send(JSON.stringify({
+                    "type": "input",
+                    'message': 'x'
+                }));
+
+                serialSocket.send(JSON.stringify({
+                    "type": "input",
+                    'message': 'a'
+                }));
+                setTimeout(() => {
+                    serialSocket.send(JSON.stringify({
+                        "type": "input",
+                        'message': 'x'
+                    }));
+                    pass=false
+
+                }, 900)
+
+            }, 6000)
+
+        }
+        serialSocket.send(JSON.stringify({
+            "type": "input",
+            'message': name
+        }));
+
+        console.log(name)
+    }, true);
+
+    document.addEventListener('keyup', (event) => {
+        if (pass) return
+        if (!manualControls) return
+        const name = event.key;
+        const code = event.code;
+        // Alert the key name and key code on keydown
+        serialSocket.send(JSON.stringify({
+            "type": "input",
+            'message': 'x'
+        }));
+        console.log("x")
+    }, true);
+
+    serialSocket.onmessage = function (e) {
+        const data = JSON.parse(e.data);
+        if (data.type === "output") {
+            console.log(data.message)
+            output.insertAdjacentHTML(
+                "afterbegin",
+                `<p class="m-0 p-0 text-gray-600"><span class="text-gray-400">Output:</span> ${data.message}</p>`
+            )
+        }
+    };
+
+    serialSocket.onclose = function (e) {
+        console.error('Chat socket closed unexpectedly');
+    };
+
+    checkManual.addEventListener("change", e => {
+        manualControls = e.target.checked
+
+        if (e.target.checked) {
+            serialSocket.send(JSON.stringify({
+                "type": "input",
+                'message': 'x'
+            }));
+        }
     })
 </script>
 
