--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -2,20 +2,20 @@
 
 <!-- Navbar -->
 <header class="z-10 w-full absolute bg-radial">
-    <nav class="w-full md:w-4/5 mx-auto px-4 lg:px-0">
+    <nav class="w-full md:w-4/5 py-5 mx-auto px-4 lg:px-0">
         <!-- Flex container -->
         <div class="flex items-center justify-between md:p-3 md:px-5">
             <!-- Logo -->
             <div class="flex justify-center items-center gap-10">
 
                 <a href="/" class="flex items-center justify-center">
-                    <img class=" h-[50px] md:h-[60px] w-auto invert-[1] brightness-0" src="{% static 'images/pesu_logo.png' %}" alt="something" />
+                    <img class=" h-[50px] md:h-[70px] w-auto invert-[1] brightness-0" src="{% static 'images/pesu_logo.png' %}" alt="something" />
                 </a>
                 <a href="/" class="flex items-center justify-center">
-                    <img class=" h-[50px] md:h-[60px] w-auto invert-[1] brightness-0" src="{% static 'images/ieee_ras_logo.png' %}" alt="something" />
+                    <img class=" h-[50px] md:h-[70px] w-auto invert-[1] brightness-0" src="{% static 'images/ieee_ras_logo.png' %}" alt="something" />
                 </a>
                 <a href="/" class="flex items-center justify-center">
-                    <img class=" h-[50px] md:h-[40px] w-auto invert-[1] brightness-0" src="{% static 'images/crais.png' %}" alt="something" />
+                    <img class=" h-[50px] md:h-[50px] w-auto invert-[1] brightness-0" src="{% static 'images/crais.png' %}" alt="something" />
                 </a>
             </div>
 
